college prj/force-app/main/default/objects/Fee__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Fee__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1500</fullName>
            </value>
            <value>
                <fullName>80000</fullName>
            </value>
            <value>
                <fullName>4500</fullName>
            </value>
            <value>
                <fullName>600</fullName>
            </value>
            <value>
                <fullName>700</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>