college prj/force-app/main/default/objects/Fee__c/fields/Type_of_Fee__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Fee__c</fullName>
    <label>Type of Fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEM Fee</fullName>
            </value>
            <value>
                <fullName>Tuition Fee</fullName>
            </value>
            <value>
                <fullName>Placement Fee</fullName>
            </value>
            <value>
                <fullName>Revolution Fee</fullName>
            </value>
            <value>
                <fullName>supplementary Fee</fullName>
            </value>
            <value>
                <fullName>Transcript Fee</fullName>
            </value>
            <value>
                <fullName>ID Fine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>