college prj/force-app/main/default/objects/Fee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Type_of_Fee__c</columns>
    <columns>Amount_Paid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>